force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/Language_Mapping_ATG_SF__mdt.object-meta.xml
<CustomObject>
    <label>Language Mapping ATG / SF</label>
    <pluralLabel>Languages Mapping ATG / SF</pluralLabel>
</CustomObject>