force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/ATG__c.field-meta.xml
<CustomField>
    <fullName>ATG__c</fullName>
    <label>ATG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ara-ae</fullName>
            </value>
            <value>
                <fullName>ara-kw</fullName>
            </value>
            <value>
                <fullName>ara-qa</fullName>
            </value>
            <value>
                <fullName>ara-sa</fullName>
            </value>
            <value>
                <fullName>deu-de</fullName>
            </value>
            <value>
                <fullName>eng-ae</fullName>
            </value>
            <value>
                <fullName>eng-au</fullName>
            </value>
            <value>
                <fullName>eng-ca</fullName>
            </value>
            <value>
                <fullName>eng-e1</fullName>
            </value>
            <value>
                <fullName>eng-gb</fullName>
            </value>
            <value>
                <fullName>eng-hk</fullName>
            </value>
            <value>
                <fullName>eng-id</fullName>
            </value>
            <value>
                <fullName>eng-in</fullName>
            </value>
            <value>
                <fullName>eng-kw</fullName>
            </value>
            <value>
                <fullName>eng-nl</fullName>
            </value>
            <value>
                <fullName>eng-qa</fullName>
            </value>
            <value>
                <fullName>eng-sa</fullName>
            </value>
            <value>
                <fullName>eng-sg</fullName>
            </value>
            <value>
                <fullName>eng-us</fullName>
            </value>
            <value>
                <fullName>esp-es</fullName>
            </value>
            <value>
                <fullName>esp-mx</fullName>
            </value>
            <value>
                <fullName>fra-ca</fullName>
            </value>
            <value>
                <fullName>fra-fr</fullName>
            </value>
            <value>
                <fullName>ind-id</fullName>
            </value>
            <value>
                <fullName>ita-it</fullName>
            </value>
            <value>
                <fullName>jpn-jp</fullName>
            </value>
            <value>
                <fullName>kor-kr</fullName>
            </value>
            <value>
                <fullName>por-br</fullName>
            </value>
            <value>
                <fullName>rus-ru</fullName>
            </value>
            <value>
                <fullName>tha-th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>