force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/Country_Iso2__c.field-meta.xml
<CustomField>
    <fullName>Country_Iso2__c</fullName>
    <description>country code iso2</description>
    <label>Country_Iso2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>