force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/Country_Iso3__c.field-meta.xml
<CustomField>
    <fullName>Country_Iso3__c</fullName>
    <description>country code iso3</description>
    <label>Country_Iso3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>