force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/Language_Iso2__c.field-meta.xml
<CustomField>
    <fullName>Language_Iso2__c</fullName>
    <label>Language_Iso2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>