force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/Meta_Language__c.field-meta.xml
<CustomField>
    <fullName>Meta_Language__c</fullName>
    <label>Meta Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>