force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/fields/Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Salesforce__c</fullName>
    <label>Salesforce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ar_AE</fullName>
            </value>
            <value>
                <fullName>ar_KW</fullName>
            </value>
            <value>
                <fullName>ar_QA</fullName>
            </value>
            <value>
                <fullName>ar_SA</fullName>
            </value>
            <value>
                <fullName>de</fullName>
                <default>true</default>
                <label>de</label>
            </value>
            <value>
                <fullName>default</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>en_AU</fullName>
            </value>
            <value>
                <fullName>en_CA</fullName>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
            <value>
                <fullName>en_HK</fullName>
            </value>
            <value>
                <fullName>en_ID</fullName>
            </value>
            <value>
                <fullName>en_IE</fullName>
            </value>
            <value>
                <fullName>en_IN</fullName>
            </value>
            <value>
                <fullName>en_SG</fullName>
            </value>
            <value>
                <fullName>en_US</fullName>
            </value>
            <value>
                <fullName>en_ZA</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>es_MX</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>fr_CA</fullName>
            </value>
            <value>
                <fullName>id</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>ja</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
            </value>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>ru</fullName>
            </value>
            <value>
                <fullName>th</fullName>
            </value>
            <value>
                <fullName>vi</fullName>
            </value>
            <value>
                <fullName>zh_CN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>