force-app/main/default/objects/Language_Mapping_ATG_SF__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ATG__c</columns>
    <columns>Salesforce__c</columns>
    <columns>Meta_Language__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>Language_Iso3__c</columns>
    <columns>Language_Iso2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>